--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2074,10 +2074,6 @@
 		line-height: 1.65;
 	}
 
-	input:not([type="submit"]), select, textarea {
-		background-color: #333333 !important;
-	}
-
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
@@ -2318,7 +2314,7 @@
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: #ffffff;
+		background: #333333;
 		border-radius: 0.375em;
 		border: none;
 		border: solid 1px rgba(210, 215, 217, 0.75);
@@ -2439,7 +2435,7 @@
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background: #ffffff;
+				background: #333333;
 				border-radius: 0.375em;
 				border: solid 1px rgba(210, 215, 217, 0.75);
 				content: '';
