Fix styles on tables

--- a/assets/main/css/main.css
+++ b/assets/main/css/main.css
@@ -2401,11 +2401,11 @@ input, select, textarea {
 		}
 
 		table th {
-			color: #3d4449;
-			font-size: 0.9em;
+			font-size: 1.5em;
 			font-weight: 600;
 			padding: 0 0.75em 0.75em 0.75em;
 			text-align: left;
+			text-decoration: underline;
 		}
 
 		table thead {
